t-rust_v_python_static/python-k8s-demo/python-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-k8s-demo
  labels:
    app: k8s-demo
    version: python
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-demo
      version: python
  template:
    metadata:
      labels:
        app: k8s-demo
        version: python
    spec:
      containers:
      - name: python-k8s-demo
        image: gcr.io/heroic-oven-430715-i1/python-k8s-demo:v1
        ports:
        - containerPort: 8080
