t-rust_v_python_static/python-k8s-demo/python-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-k8s-demo
spec:
  selector:
    app: k8s-demo
    version: python
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
