t-rust_v_python_static/python-k8s-demo/rust-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rust-k8s-demo
spec:
  selector:
    app: k8s-demo
    version: rust
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
