t-rust_v_python_static/python-k8s-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-demo-service
spec:
  selector:
    app: k8s-demo
    version: python
  ports:
    - port: 80
      targetPort: 8080
  type: LoadBalancer
  loadBalancerIP: "34.54.121.244"
