t-rust_v_python_static/python-k8s-demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-demo-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "global-static-ip"
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.gcp.kubernetes.io/pre-shared-cert: "my-ssl-cert"
spec:
  rules:
  - http:
      paths:
      - path: /python
        pathType: Prefix
        backend:
          service:
            name: python-k8s-demo
            port:
              number: 8080
      - path: /rust
        pathType: Prefix
        backend:
          service:
            name: rust-k8s-demo
            port:
              number: 8080
